--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,7 +110,7 @@ img {
 } */
 
 .section {
-  margin: 5rem 0 8rem;
+  padding-top: 8rem;
 }
 
 .section__titles {
@@ -143,6 +143,7 @@ img {
   max-width: 968px;
   margin-left: auto;
   margin-right: auto;
+  /* border: 1px solid red; */
 }
 
 .grid {
@@ -184,23 +185,25 @@ img {
   transform: translateX(.25rem);
 }
 
-.button__icon {
-  display: inline-flex;
+.icon__button {
+  display: flex;
   align-items: center;
   justify-content: center;
-  padding: .5rem;
-  border-radius: .25rem;
+  border-radius: var(--border-radius);
   background-color: var(--container-color);
   box-shadow: var(--shadow);
+  width: 35px;
+  height: 35px;
+  font-size: 1.15rem;
 }
 
-.button__icon-icon {
+.icon__button-icon {
   transition: .3s;
 }
 
-.button__icon:hover .button__icon-icon,
-.button__icon:focus .button__icon-icon {
-  color: var(--first-color)
+.icon__button:hover .icon__button-icon,
+.icon__button:focus .icon__button-icon {
+  color: var(--first-color);
 }
 
 .main {
@@ -239,6 +242,12 @@ img {
   color: var(--first-color);
 }
 
+.nav__buttons {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
 .scroll-header {
   box-shadow: var(--shadow);
 }
@@ -269,7 +278,8 @@ img {
 .home__image {
   width: 250px;
   border-radius: var(--border-radius);
-  justify-self: center;
+  justify-self: flex-end;
+  margin-right: 20px;
   box-shadow: var(--first-color-lighten) 20px 20px;
   transition: .3s;
 }
@@ -344,8 +354,8 @@ img {
   box-shadow: var(--shadow);
   border-radius: var(--border-radius);
   padding: var(--gap) 0;
-  width: 475px;
   box-shadow: var(--shadow);
+  width: 475px;
 }
 
 .skill__card__title {
