--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,28 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 :root {
   --header-height: 3.5rem;
 
-  --first-color: rgb(28, 100, 209);
-  --first-color-alt: rgb(16, 71, 153);
-  --first-color-light: rgb(32, 87, 170);
-  --first-color-lighten: rgb(195, 216, 248);
+  --first-color: #0E4F9B;
+  --first-color-alt: #2f84e6;
+  --title-color: #05101D;
+  --text-color: #3b4149;
+  --text-color-light: #A5B0BD;
+  --body-color: #fff;
+  --container-color: #fff;
+  --box-shadow: 0 0 10px rgba(40, 37, 37, 0.1);
 
-  --title-color: rgb(40, 38, 43);
-  --text-color: rgb(25, 24, 27);
-  --text-color-light: rgb(217, 225, 235);
-
-  --body-color: rgb(255, 255, 255);
-  --container-color: rgb(255, 255, 255);
-  --shadow: 0 2px 8px rgba(40, 39, 41, 0.144);
-  
   --body-font: 'Poppins', sans-serif;
   
+  --biggest-font-size: 1.5rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
-
-  --big-font-size: 2rem;
   --normal-font-size: .938rem;
   --small-font-size: .813rem;
   --smaller-font-size: .75rem;
@@ -30,8 +25,12 @@
   --font-medium: 500;
   --font-semi-bold: 600;
 
-  --gap: 2rem;
-  --border-radius: .5rem;
+  --mb-0-25: .25rem;
+  --mb-0-5: .5rem;
+  --mb-1: 1rem;
+  --mb-1-5: 1.5rem;
+  --mb-2: 2rem;
+  --mb-2-5: 2.5rem;
 
   --z-tooltip: 10;
   --z-fixed: 100;
@@ -39,18 +38,18 @@
 
 @media screen and (min-width: 968px) {
   :root {
+    --biggest-font-size: 2.5rem;
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
-
-    --big-font-size: 3.5rem;
     --normal-font-size: 1rem;
     --small-font-size: .875rem;
     --smaller-font-size: .813rem;
   }
 }
 
-/* --------------- DEFAULTS --------------- */
+/* ------------ DEFAULTS ------------ */
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -63,8 +62,7 @@ html {
 
 body,
 button,
-input,
-textarea {
+input {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
 }
@@ -73,16 +71,10 @@ body {
   margin: var(--header-height) 0 0 0;
   background-color: var(--body-color);
   color: var(--text-color);
-  transition: .4s;
+  transition: .4s; 
 }
 
-button {
-  cursor: pointer;
-  border: none;
-  outline: none;
-}
-
-h1, h2, h3 {
+h1, h2, h3, h4 {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
@@ -92,8 +84,8 @@ ul {
 }
 
 a {
-  outline: none;
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 img {
@@ -101,49 +93,17 @@ img {
   height: auto;
 }
 
-body.dark-theme {
-  --title-color: rgb(242, 242, 243);
-  --text-color: rgb(205, 205, 214);
-  --first-color-lighten: rgb(60, 65, 75);
-  --body-color: rgb(28, 28, 33);
-  --container-color: rgb(31, 32, 37);
-  --shadow: 0 2px 8px rgba(22, 30, 41, 0.25);
-}
-
-.section {
-  padding: 8rem 0 2rem 0;
-}
-
-.section__titles {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: var(--gap);
-}
-
-.section__subtitle,
-.section__subtitle-center {
-  color: var(--text-color-light);
-  font-size: var(--h4-font-size);
-  font-weight: normal;
-  line-height: 140%;
-}
-
-.section__title,
-.section__title-center {
-  color: var(--first-color);
-  font-size: var(--h2-font-size);
-  line-height: 140%;
-}
-
-.section__title-center {
-  text-align: center;
+button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .container {
   max-width: 968px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: var(--mb-1-5);
+  margin-right: var(--mb-1-5);
 }
 
 .grid {
@@ -154,129 +114,91 @@ body.dark-theme {
   overflow: hidden;
 }
 
-::-webkit-scrollbar {
-  width: 8px;
+.section {
+  padding: 4.5rem 0 1rem;
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: var(--text-color-light);
-}
-
-/* --------------- BUTTON --------------- */
-.button {
-  background-color: var(--first-color);
-  border: 1px solid var(--first-color);
-  padding: .75rem 2.75rem;
-  border-radius: var(--border-radius);
-  display: inline-flex;
+.section__header {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  column-gap: .5rem;
+  justify-content: center;
+  margin-bottom: var(--mb-1-5);
+}
+
+.section__title {
+  text-align: center;
+  font-weight: var(--font-semi-bold);
+  font-size: var(--h2-font-size);
+  color: var(--title-color);
+}
+
+.section__subtitle {
+  text-align: center;
+  font-weight: var(--font-medium);
+  font-size: var(--h3-font-size);
+  color: var(--text-color-light);
+}
+
+/* ------------ BUTTON ------------ */
+
+.button {
   color: #fff;
+  display: inline-block;
+  background-color: var(--first-color);
+  border: 2px solid var(--first-color);
+  padding: .75rem 1.5rem;
+  font-weight: var(--font-medium);
+  border-radius: .65rem;
   transition: .3s;
 }
 
-.button:hover,
-.button:focus {
-  border-color: var(--first-color-alt);
+.button:hover {
   background-color: var(--first-color-alt);
 }
 
-.button-icon {
-  transition: .3s;
-}
-
-.button:hover .button-icon {
-  transform: translateX(.25rem);
-}
-
-.icon__button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: var(--border-radius);
-  background-color: var(--container-color);
-  box-shadow: var(--shadow);
-  color: var(--text-color);
-  width: 35px;
-  height: 35px;
-  font-size: 1.15rem;
-  transition: .3s;
-  cursor: pointer;
-}
-
-.icon__button-icon {
-  transition: .3s;
-}
-
-.icon__button:hover .icon__button-icon,
-.icon__button:focus .icon__button-icon {
+.button-outline {
   color: var(--first-color);
+  border: 2px solid var(--first-color);
+  background-color: #fff;
 }
 
-/* --------------- SCROLLUP --------------- */
-.scrollup {
-  position: fixed;
-  z-index: var(--z-fixed);
-  bottom: 5rem;
-  right: 5rem;
-  transition: .4s;
-}
+/* ------------ HEADER ------------ */
 
-.show-scroll {
-  bottom: -5rem;
-}
-
-/* --------------- CARD OVERFLOW --------------- */
-.card-overflow {
-  position: absolute;
-  width: 200px;
-  height: 100px;
-  transform: rotate(-45deg);
-  background-color: var(--first-color-lighten);
-  transition: .4s;
-}
-
-.overflow-1 {
-  top: -100px;
-  left: -150px;
-}
-
-.overflow-2 {
-  bottom: -100px;
-  right: -150px;
-}
-
-/* --------------- HEADER --------------- */
 .header {
+  width: 100%;
+  background-color: var(--body-color);
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  background-color: var(--body-color);
-  height: calc(var(--header-height) + 1.5rem);
   z-index: var(--z-fixed);
   transition: .4s;
 }
 
 .nav {
-  height: calc(var(--header-height) + 1.5rem);
+  height: var(--header-height);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
+.nav__logo,
+.nav__close,
+.nav__toggle {
+  color: var(--title-color);
+}
+
 .nav__logo {
   display: flex;
   align-items: center;
-  column-gap: .55rem;
-  color: var(--title-color);
+  column-gap: .25rem;
   font-weight: var(--font-medium);
-  transition: .3s;
 }
 
-.nav__logo:hover,
-.nav__logo:focus {
-  color: var(--first-color);
+.nav__toggle {
+  display: inline-flex;
+  font-size: 1.25rem;
+  cursor: pointer;
 }
 
 .nav__buttons {
@@ -285,122 +207,242 @@ body.dark-theme {
   column-gap: 1rem;
 }
 
-.scroll-header {
-  box-shadow: var(--shadow);
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    background-color: var(--body-color);
+    top: -100%;
+    left: 0;
+    width: 100%;
+    padding: 4rem 0;
+    box-shadow: var(--box-shadow);
+    transition: .4s;
+  }
 }
 
-/* --------------- HOME --------------- */
-.home__container {
-  padding: 8rem 0;
-  gap: var(--gap);
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-}
-
-.home__data {
+.nav__list {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  row-gap: 1.5rem;
 }
 
-.home__title {
-  font-size: 2.5rem;
-  line-height: 140%;
-}
-
-.home__description {
-  margin: .5rem 0 2.5rem 0;
-}
-
-.home__image {
-  width: 250px;
-  border-radius: var(--border-radius);
-  justify-self: flex-end;
-  margin-right: 20px;
-  box-shadow: var(--first-color-lighten) 20px 20px;
+.nav__link {
+  color: var(--title-color);
+  font-weight: var(--font-medium);
   transition: .3s;
 }
 
-.home__image:hover {
-  box-shadow: var(--first-color-lighten) 25px 25px;
+.nav__link:hover,
+.nav__link:focus {
+  color: var(--first-color);
+  text-decoration: none;
 }
 
-/* --------------- ABOUT --------------- */
+.nav__close {
+  font-size: 2rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.show-menu {
+  top: 0;
+}
+
+.scroll-header {
+  box-shadow: var(--box-shadow);
+}
+
+.active-link {
+  color: var(--first-color);
+}
+
+/* ------------ HOME ------------ */
+
+.home__container {
+  padding-top: 1.5rem;
+  row-gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home__image {
+  width: 220px;
+}
+
+.home__data {
+  text-align: center;
+  margin-bottom: var(--mb-2-5);
+}
+
+.home__title {
+  line-height: 150%;
+  font-size: var(--biggest-font-size);
+  margin-bottom: var(--mb-0-5);
+}
+
+.home__description {
+  padding: 0 2rem;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-2-5);
+}
+
+.home__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: .5rem;
+}
+
+.home__image__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home__image {
+  border-radius: .65rem;
+}
+
+.image__detail {
+  width: 140px;
+  height: 6px;
+  background-color: var(--text-color-light);
+}
+
+.image__detail-1 {
+  border-radius: 4px 4px 0 0;
+}
+
+.image__detail-2 {
+  border-radius: 0 0 4px 4px;
+}
+
+/* ------------ ABOUT ------------ */
+
 .about__container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.about__skills {
-  display: flex;
-  align-items: center;
-  column-gap: var(--gap);
+.about__description {
+  text-align: center;
+  padding: 0 .5rem;
+  margin-bottom: var(--mb-1-5);
 }
 
-.about__skill__card {
+/* ------------ EXPERIENCES ------------ */
+
+.experiences__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.experiences__list {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 1.5rem 0;
-  background-color: var(--container-color);
-  box-shadow: var(--shadow);
-  border-radius: var(--border-radius);
-  width: 200px;
-  cursor: default;
-  transition: .4s;
+  row-gap: 1.5rem;
 }
 
-.about__skill__card-icon {
-  font-size: 1.5rem;
-  color: var(--first-color-lighten);
-  transition: .3s;
+.experience__item {
+  padding: 1rem;
+  border-radius: .65rem;
+  box-shadow: var(--box-shadow);
 }
 
-body.dark-theme .about__skill__card-icon {
+.experience__divider {
+  width: 100%;
+  height: 1px;
+  background-color: var(--text-color-light);
+  margin: 1rem 0;
+}
+
+.experience__title {
   color: var(--first-color);
-}
-
-.about__card__title {
-  margin: 1rem 0 .2rem 0;
   font-size: var(--h3-font-size);
 }
 
-.about__card__data {
-  font-size: 1rem;
+.all__experiences {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.experience {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid red;
+  width: 380px;
+}
+
+.experience__period {
   color: var(--text-color-light);
+  font-size: var(--smaller-font-size);
 }
 
-.about__skill__card:hover .about__skill__card-icon {
-  transform: translateY(-.25rem);
+.experience__description {
+  color: var(--text-color-light);
+  font-size: var(--smaller-font-size);
 }
 
-.about__description {
-  text-align: center;
-  margin: var(--gap) 4rem;
+.experience__dot {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background-color: var(--body-color);
+  border: 4px solid var(--first-color);
+  z-index: 1;
 }
+
+.experience__line {
+  width: 10px;
+  height: 125px;
+  margin-top: -10px;
+  background-color: var(--first-color);
+}
+
+.experience__dot-2 {
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  background-color: var(--first-color);
+  margin-top: var(--mb-0-5);
+}
+
+.experience__dot-3 {
+  width: 8px;
+  height: 8px;
+  border-radius: 100%;
+  background-color: var(--first-color);
+  margin-top: var(--mb-0-5);
+}
+
 
 /* --------------- SKILLS --------------- */
 .skills__container {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  column-gap: var(--gap);
+  row-gap: var(--mb-1-5);
 }
 
 .skill__card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 2.5rem;
-  border-radius: var(--border-radius);
-  background-color: var(--container-color);
-  box-shadow: var(--shadow);
-  padding: 2.5rem 0;
-  width: 475px;
-  position: relative;
-  overflow: hidden;
+  row-gap: var(--mb-1-5);
+  padding: var(--mb-1-5) 0;
+  border-radius: 0.65rem;
+  width: 350px;
   transition: .4s;
+  box-shadow: var(--box-shadow);
 }
 
 .skill__card__title {
@@ -412,7 +454,7 @@ body.dark-theme .about__skill__card-icon {
 .skill__card__abilities {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: var(--gap);
+  gap: var(--mb-1-5);
 }
 
 .skill {
@@ -427,24 +469,13 @@ body.dark-theme .about__skill__card-icon {
 }
 
 .skill__name {
+  color: var(--text-color);
   font-size: var(--normal-font-size);
 }
 
 .skill__level {
   font-size: var(--small-font-size);
   color: var(--text-color-light);
-}
-
-.skill__card:hover .overflow-1,
-.skill__card:focus .overflow-1 {
-  top: -30px;
-  left: -80px;
-}
-
-.skill__card:hover .overflow-2,
-.skill__card:focus .overflow-2 {
-  bottom: -30px;
-  right: -80px;
 }
 
 /* --------------- PROJECTS --------------- */
@@ -492,71 +523,19 @@ body.dark-theme .about__skill__card-icon {
   column-gap: 1rem;
 }
 
-/* --------------- CONTACTS --------------- */
-.contact__container {
-  grid-template-columns: repeat(2, 1fr);
-  gap: var(--gap);
-}
-
-.contact__card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 4rem var(--gap);
-  background-color: var(--container-color);
-  box-shadow: var(--shadow);
-  border-radius: var(--border-radius);
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition: .4s;
-}
-
-.contact__card-icon {
-  font-size: 1.5rem;
-  color: var(--first-color);
-  transition: .3s;
-}
-
-.contact__title {
-  margin: 1rem 0 .2rem 0;
-  font-size: var(--h3-font-size);
-}
-
-.contact__data {
-  font-size: 1rem;
-  color: var(--text-color-light);
-}
-
-.contact__card:hover .contact__card-icon {
-  transform: translateY(-.25rem);
-}
-
-.contact__card:hover .overflow-1,
-.contact__card:focus .overflow-1 {
-  top: -30px;
-  left: -80px;
-}
-
-.contact__card:hover .overflow-2,
-.contact__card:focus .overflow-2 {
-  bottom: -30px;
-  right: -80px;
-}
-
 /* --------------- FOOTER --------------- */
 .footer {
-  margin-top: 8rem;
-  padding: 4rem;
+  padding: var(--mb-2-5) 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--first-color-lighten);
+  background-color: var(--title-color);
   transition: .4s;
 }
 
 .footer__title {
   text-align: center;
+  color: var(--text-color-light);
 }
 
 .footer__row {
@@ -578,16 +557,16 @@ body.dark-theme .about__skill__card-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--title-color);
-  border-radius: var(--border-radius);
-  color: var(--text-color-light);
+  background-color: var(--first-color);
+  border-radius: 0.65rem;
+  color: var(--container-color);
   font-size: 1.25rem;
   transition: .3s;
 }
 
 .social__link:hover,
 .social__link:focus {
-  color: var(--first-color-light);
+  background-color: var(--first-color-alt);
 }
 
 .footer__copy {
@@ -601,137 +580,3 @@ body.dark-theme .social__link {
 }
 
 /* --------------- BREAKPOINTS --------------- */
-@media screen and (max-width: 457px) {
-  .container{
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-  }
-
-  .scrollup {
-    bottom: 2rem;
-    right: 1rem;
-  }
-  
-  .show-scroll {
-    bottom: -2rem;
-  }
-
-  .home__container {
-    padding: 8rem 0;
-    gap: var(--gap);
-    grid-template-columns: repeat(1, 1fr);
-    align-items: center;
-  }
-  
-  .home__data {
-    align-items: center;
-    margin-bottom: 2rem;
-  }
-
-  .home__title {
-    font-size: var(--h1-font-size);
-    text-align: center;
-  }
-
-  .home__description {
-    text-align: center;
-  }
-
-  .home__image {
-    justify-self: center;
-  }
-  
-  .home__image:hover {
-    box-shadow: var(--first-color-lighten) 25px 25px;
-  }
-
-  .about__skills {
-    width: 100%;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: var(--gap);
-  }
-
-  .about__skill__card {
-    padding: 1rem .5rem;
-    width: 150px;
-  }
-
-  .about__description {
-    text-align: center;
-    margin: var(--gap);
-  }
-
-  .skills__container {
-    flex-direction: column;
-    row-gap: var(--gap);
-  }
-  
-  .skill__card {
-    padding: 2.5rem 0;
-    width: 100%;
-  }
-
-  .skill__card:hover .overflow-1,
-  .skill__card:focus .overflow-1 {
-    top: -40px;
-    left: -110px;
-  }
-
-  .skill__card:hover .overflow-2,
-  .skill__card:focus .overflow-2 {
-    bottom: -40px;
-    right: -110px;
-  }
-
-  .project {
-    flex-direction: column;
-    row-gap: var(--gap);
-  }
-  
-  .project-reverse {
-    flex-direction: column;
-  }
-
-  .project__image {
-    width: 100%;
-    height: 150px;
-    border-radius: var(--border-radius);
-  }
-
-  .project__data {
-    height: auto;
-  }
-
-  .project__links {
-    margin-top: var(--gap);
-  }
-
-  .contact__container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .contact__card {
-    padding: 2rem 0;
-    transition: .4s;
-  }
-
-  .contact__card:hover .overflow-1,
-  .contact__card:focus .overflow-1 {
-    top: -50px;
-    left: -120px;
-  }
-
-  .contact__card:hover .overflow-2,
-  .contact__card:focus .overflow-2 {
-    bottom: -50px;
-    right: -120px;
-  }
-}
-
-@media screen and (max-width: 976px) {
-  .container{
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-  }
-}
