--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -479,48 +479,48 @@ button {
 }
 
 /* --------------- PROJECTS --------------- */
+.projects {
+  margin-bottom: var(--mb-2-5);
+}
+
 .projects__container {
-  display: flex;
-  flex-direction: column; 
-  row-gap: var(--gap);
+  justify-content: center;
+  row-gap: var(--mb-1-5);
 }
 
 .project {
-  display: flex;
-  column-gap: var(--gap);
-  border-radius: var(--border-radius);
-  background-color: var(--container-color);
-  border-radius: var(--border-radius);
-  box-shadow: var(--shadow);
-  padding: var(--gap);
-  transition: .4s;
-}
-
-.project-reverse {
-  flex-direction: row-reverse;
-}
-
-.project__image {
-  width: 400px;
-  height: 250px;
-  border-radius: var(--border-radius);
+  border-radius: 0.65rem;
+  width: 350px;
+  box-shadow: var(--box-shadow);
+  overflow: hidden;
 }
 
 .project__data {
-  height: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  padding: var(--mb-1-5);
 }
 
-.project__title {
-  margin-bottom: .5rem;
+.project__name {
+  margin-bottom: var(--mb-0-5);
+}
+
+.project__description {
+  margin-bottom: var(--mb-1-5);
 }
 
 .project__links {
   display: flex;
   align-items: center;
-  column-gap: 1rem;
+  column-gap: var(--mb-1-5);
+}
+
+.project__link {
+  color: var(--first-color);
+}
+
+.project__link:active {
+  color: var(--first-color-alt);
 }
 
 /* --------------- FOOTER --------------- */
