--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 :root {
-    --body-color: #e8f7ed;
-    --container-color: #9D9D9D;
-    --text-color: #040905;
-    --text-light-color: #727272
+    --body-color: #61e78e;
+    --text-color: #0C060F;
+    --text-light-color: #4a8d50;
 }
 
 * {
@@ -37,7 +36,7 @@ body {
 .header__image {
     width: 132px;
     border-radius: 100%;
-    border: 3px solid var(--text-color);
+    border: 4px solid var(--text-color);
 }
 
 .header__data {
@@ -55,23 +54,12 @@ body {
 }
 
 .divider {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 1rem;
-}
-
-.divider__line {
-    height: 1px;
-    width: 70px;
-    background-color: var(--container-color);
+    height: 2px;
+    align-self: center;
+    width: 80%;
     border-radius: 5px;
-}
-
-.divider__title {
-    font-size: .75rem;
-    font-weight: 500;
-    color: var(--container-color);
+    border-style:solid;
+    border-color: var(--text-light-color);
 }
 
 .links {
@@ -100,27 +88,27 @@ body {
 }
 
 .link-instagram {
-    background-color: #f00d59;    
+    background-color: #F6246B;    
 }
 
 .link-linkedin {
-    background-color: #1eaaf5;    
-}
-
-.link-resume {
-    background-color: #13f129;    
+    background-color: #0DDAF5;    
 }
 
 .link-email {
-    background-color: #fc9015;
+    background-color: #FC9015;
 }
 
 .link-github {
-    background-color: #f0ec1e;    
+    background-color: #F0EC1E;    
 }
 
 .link-meetcompass {
     background-color: #764cf5;    
+}
+
+.link-resume {
+    background-color: #FF3535;    
 }
 
 .footer {
