refactor: refactoring text light color

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --body-color: #61e78e;
     --text-color: #0C060F;
-    --text-light-color: #4a8d50;
+    --text-light-color: #3e5a40;
 }
 
 * {
