--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 :root {
-    --body-color: #61e78e;
-    --text-color: #0C060F;
-    --text-light-color: #3e5a40;
+    --body-color: #181a1d;
+    --container-color: #000000;
+    --text-color: #ffffff;
+    --text-light-color: #dee2f3;
 }
 
 * {
@@ -12,9 +13,43 @@
 }
 
 body {
-    color: var(--text-color);
     background-color: var(--body-color);
     position: relative;
+    min-height: 100vh;
+}
+
+.offset {
+    position: absolute;
+    opacity: 0;
+    transition: .3s;
+}
+.offset1 {
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100px;
+    background-color: #bcd2f31e;
+}
+.offset2 {
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 130px;
+    background-color: #bcd2f31e;
+}
+.offset3 {
+    bottom: 0;
+    right: 0;
+    width: 300px;
+    height: 100px;
+    background-color: #bcd2f31e;
+}
+.offset4 {
+    bottom: 0;
+    right: 0;
+    width: 200px;
+    height: 130px;
+    background-color: #bcd2f31e;
 }
 
 .main {
@@ -24,6 +59,8 @@ body {
     row-gap: 2rem;
     padding: 2rem;
     height: 100vh;
+    position: relative;
+    z-index: 5;
 }
 
 .header {
@@ -35,8 +72,9 @@ body {
 
 .header__image {
     width: 132px;
+    height: 132px;
     border-radius: 100%;
-    border: 4px solid var(--text-color);
+    border: 4px solid var(--container-color);
 }
 
 .header__data {
@@ -44,12 +82,14 @@ body {
 }
 
 .header__title {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
+    font-weight: 600;
+    color: var(--text-color);
 }
 
 .header__subtitle {
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 500;
     color: var(--text-light-color);
 }
 
@@ -59,7 +99,7 @@ body {
     width: 80%;
     border-radius: 5px;
     border-style:solid;
-    border-color: var(--text-light-color);
+    border-color: #31343b;
 }
 
 .links {
@@ -76,15 +116,15 @@ body {
     text-decoration: none;
     font-weight: 600;
     font-size: 1rem;
-    color: var(--text-color);
-    border: 3px solid var(--text-color);
-    box-shadow: 5px 5px 0 var(--text-color);
+    color: var(--container-color);
+    border: 3px solid var(--container-color);
+    box-shadow: 4px 4px 0 var(--container-color);
     transition: .3s;
     -webkit-tap-highlight-color: transparent;
 }
 
 .link:hover, .link:focus {
-    box-shadow: 6px 6px 0 var(--text-color);
+    box-shadow: 6px 6px 0 var(--container-color);
 }
 
 .link-instagram {
@@ -118,10 +158,14 @@ body {
 
 .copyright {
     font-size: .75rem;
-    color: var(--container-color);
+    color: var(--text-light-color);
 }
 
 @media screen and (min-width: 768px) {
+    .offset {
+        opacity: 1;
+    }
+
     .main {
         width: 600px;
         position: absolute;
