--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,10 @@ body {
     background-color: #bcd2f31e;
 }
 .offset4 {
-    bottom: 0;
+    bottom: -30px;
     right: 0;
     width: 200px;
-    height: 130px;
+    height: 160px;
     background-color: #bcd2f31e;
 }
 
@@ -143,12 +143,16 @@ body {
     background-color: #F0EC1E;    
 }
 
-.link-meetcompass {
+.link-suppmessenger {
     background-color: #764cf5;    
 }
 
-.link-resume {
+.link-resume-1 {
     background-color: #FF3535;    
+}
+
+.link-resume-2 {
+    background-color: #6eff35;    
 }
 
 .footer {
@@ -159,6 +163,21 @@ body {
 .copyright {
     font-size: .75rem;
     color: var(--text-light-color);
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background-color: var(--body-color);
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--container-color);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #0c0c0c;
 }
 
 @media screen and (min-width: 768px) {
